--- a/admin.css
+++ b/admin.css
@@ -283,3 +283,19 @@
 }
 
 /* chat Box end */
+
+/* loug out button */
+.logout-btn {
+  margin-left: 15px;
+  background: #d9534f;
+  color: #fff;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+.logout-btn:hover {
+  background: #c9302c;
+}
+ /* end logout button */
